--- a/assets/css/wishon.css
+++ b/assets/css/wishon.css
@@ -914,7 +914,7 @@ ul {
   position: relative;
   display: block;
   margin-left: 60px;
-  margin-right: 30px;
+  margin-right: 20px;
   padding: 13px 0;
 }
 
